flex/flex-tests/testData/js2_highlighting/InaccessibleRefsReported.js2
package <error>foo</error> {
class InaccessibleRefsReported {}
}

package <error>bar</error> {
import foo.<error descr="Element is not accessible">InaccessibleRefsReported</error>
var <error>b</error>:<error descr="Element is not accessible">InaccessibleRefsReported</error>
}

class Bar {
    protected function foo():* {}
    private var bar;
}

new Bar().<error descr="Protected member is not accessible">foo</error>();
new Bar().<error descr="Private member is not accessible">bar</error> = 1;


